# olist-ecommerce

./: .gitattributes  .gitignore  config.toml  pyproject.toml
notebooks/: exploracao.ipynb
olist_ecommerce/: .user.yml  dbt_project.yml  profiles.yml
olist_ecommerce/models/staging/: sources.yml  stg_olist__customers.sql  stg_olist__geolocation.sql  stg_olist__order_items.sql  stg_olist__order_payments.sql  stg_olist__order_reviews.sql  stg_olist__orders.sql  stg_olist__products.sql  stg_olist__sellers.sql
src/: 1_download_dataset.py
